# monocle.krk

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  monocle.krk
def/: vkuroko.def
include/: ctpl_stl.h  prng.hpp  tga.hpp
src/: module_monocle.c  monocle.cpp  monocle.h  source_math.asm  source_math.cpp  source_math.hpp  time_scope.hpp  vag_logic.cpp  vag_logic.hpp  vag_search.hpp
